[gd_scene load_steps=3 format=2]

[ext_resource path="res://Prefabs/Components/Characters/SkillBase.tscn" type="PackedScene" id=1]
[ext_resource path="res://Prefabs/Skills/Raouss/CloudRune.gd" type="Script" id=2]

[node name="CloudRune" instance=ExtResource( 1 )]
script = ExtResource( 2 )
icon_path = "res://Prefabs/Components/UI/SkillIcons/CloudRune_icon.tscn"
reflect_color = Color( 0.12549, 0.941176, 0.960784, 1 )

[node name="Cooldown" parent="." index="0"]
wait_time = 0.8

[node name="ReflectWindow" type="Timer" parent="." index="1"]
wait_time = 0.167
one_shot = true

[connection signal="timeout" from="Cooldown" to="." method="_on_Cooldown_timeout"]
[connection signal="timeout" from="ReflectWindow" to="." method="_on_ReflectWindow_timeout"]
